fix : update overflow hidden

--- a/src/styles/components/informationcontainer.sass
+++ b/src/styles/components/informationcontainer.sass
@@ -41,6 +41,7 @@
             color: variables.$text-color
             text-decoration: none
             font-weight: bold
+            overflow: hidden
             flex-wrap: wrap
             margin-top: .8rem
 
